# sonic-udld

./: .gitignore  Makefile.am  README.md  configure.ac  package.cfg
cfg/: base_nas_default_init.py  base_nas_default_init.sh  dn_rules.sh  sonic-nas-init.service  sonic-nas.service
cfg/etc/sysctl.d/: dn-ip.conf
debian/: changelog  control
sonic/: hald_init.h
src/: hald_init.c  main.c
